--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mongo
     environment:
       MONGO_INITDB_DATABASE: songdb
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: pass123
+      MONGO_INITDB_ROOT_USERNAME:  
+      MONGO_INITDB_ROOT_PASSWORD: 
     volumes:
       - "./mongodb-data:/data/db"
     networks:
